--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
 
 body {
     --blue: rgb(21, 151, 226);
+    --dark-blue: rgb(15, 117, 177);
     --gray: rgb(224, 226, 231);
     --shadow: rgb(198, 198, 201);
     --dark-gray: rgb(110, 110, 110);
@@ -18,6 +19,7 @@ body {
 ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 h1, h2, h3, h4 {
@@ -40,6 +42,12 @@ h1, h2, h3, h4 {
     font-size: x-large;
 }
 
+.sidebar li {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
 .main-content {
     display: grid;
     grid-column: 2;
@@ -47,7 +55,7 @@ h1, h2, h3, h4 {
 }
 
 header {
-    padding: 40px 50px;
+    padding: clamp(20px, 30px, 40px);
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 20px;
@@ -58,11 +66,38 @@ header {
     border-radius: 30px;
     text-justify: auto;
     width: 80%;
+    height: fit-content;
     background-color: var(--gray);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .user-data, .header-buttons {
     justify-self: end;
+}
+
+.user-data>span>img {
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+}
+
+header>.greeting>div>img {
+    width: 90px;
+    height: 90px;
+    border-radius: 100%;
+}
+
+.greeting {
+    display: flex;
+    gap: 40px;
+}
+
+.user-data {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .header-buttons {
@@ -82,6 +117,11 @@ header {
     border-radius: 30px;
 }
 
+.header-buttons>button:hover, .sidebar li:hover {
+    cursor: pointer;
+    background-color: var(--dark-blue);
+}
+
 .cards {
     background-color: var(--gray);
     display: grid;
@@ -92,7 +132,7 @@ header {
 
 .projects>div {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: clamp(10px, 30px, 40px);
 }
 
@@ -111,6 +151,15 @@ header {
 
 .projects>div>article>div {
     justify-self: end;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: var(--dark-gray);
+}
+
+article span:hover {
+    color: black;
+    cursor: pointer;
 }
 
 article>p, .announcements p {
@@ -122,8 +171,9 @@ article>p, .announcements p {
 }
 
 .more-info {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 .announcements>div {
